identity/base/keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: xdew-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.xdew.ch
      secretName: keycloak-tls
  rules:
    - host: auth.xdew.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
